<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bestStoreLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:background="@android:color/holo_blue_light">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/buttons"
        android:text="Return"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView

        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="Stores"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="16dp"

        android:background="@android:color/holo_blue_light"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price"
        tools:listitem="@layout/best_store_row" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/price"
        android:layout_width="110dp"
        android:layout_height="72dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttons"
        android:text="Price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/distance"
        android:layout_width="110dp"
        android:layout_height="72dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@drawable/buttons"
        android:text="Distance"
        app:layout_constraintBottom_toBottomOf="@+id/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/price" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/review"
        android:layout_width="110dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:text="Review"
        android:background="@drawable/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/best3"
        android:layout_width="110dp"
        android:layout_height="72dp"
        android:background="@drawable/buttons"
        android:text="Best 3 or 4"
        app:layout_constraintBottom_toBottomOf="@+id/review"
        app:layout_constraintEnd_toStartOf="@+id/review"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/review" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/local"
        android:layout_width="110dp"
        android:layout_height="72dp"
        android:background="@drawable/buttons"
        android:text="Local"
        app:layout_constraintBottom_toBottomOf="@+id/review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/review"
        app:layout_constraintTop_toTopOf="@+id/review" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scroll and Choose an Option below to view more details"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distance" />


</androidx.constraintlayout.widget.ConstraintLayout>
