<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragmentBrowseV2"
        android:title="Browse"
        android:icon="@drawable/ic_browse"/>
    <item
        android:id="@+id/cartFragment"
        android:title="Cart"
        android:icon="@drawable/ic_shopping_cart"/>

    <item
        android:id="@+id/recipeFragment"
        android:title="Recipe"
        android:icon="@drawable/ic_recipe"/>

</menu>