<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/storestatlayout"
    android:background="@android:color/holo_blue_light"
    >




    <TextView
        android:id="@+id/Price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="Price"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/Distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Distance" />

    <TextView
        android:id="@+id/Local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Local"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="@+id/GoBack"
        app:layout_constraintTop_toBottomOf="@+id/GoBack" />

    <TextView
        android:id="@+id/Distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Distance"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="@+id/Local"
        app:layout_constraintTop_toBottomOf="@+id/Local" />

    <TextView
        android:id="@+id/Review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Review"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="@+id/Distance"
        app:layout_constraintTop_toBottomOf="@+id/Distance" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/GoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"

        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="Return"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Review" />

</androidx.constraintlayout.widget.ConstraintLayout>
