...
            android:layout_height="wrap_content"
            android:background="@drawable/greyed_buttons"
            android:text="Address"
            android:textSize="25sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:text="Sign In"
            android:textSize="25sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logoutBtn"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:text="Sign Out"
            android:textSize="25sp"/>
...
